# spaced-repetition-learning

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.md  requirements.txt  setup.py  spl-requirements.md  srl-requirements.md
src/: cli.py  problems.py  storage.py
srl/: __main__.py  banner.py  cli.py  main.py  pause_state.py  server.py  storage.py  utils.py
srl/commands/: __init__.py  add.py  audit.py  backup.py  calendar.py  config.py  generate_preview.py  history.py  inprogress.py  ledger.py  list_.py  mastered.py  nextup.py  pause.py  random.py  random_all.py  remove.py  resume.py  server.py  summary.py  take.py
srl/commands/audit/: __init__.py  fail.py  history.py  pass_.py  run.py  utils.py
srl/commands/backup/: __init__.py  create.py  list_.py  restore.py  utils.py  verify.py
srl/commands/nextup/: __init__.py  add.py  clear.py  list_.py  remove.py  utils.py
starter_data/: blind_75.csv  blind_75.txt  neetcode_150.csv  neetcode_150.txt
tests/: conftest.py  test_cli.py  test_main.py  test_server.py  test_summary.py
tests/test_commands/: test_add.py  test_add_case_insensitive.py  test_audit.py  test_backup.py  test_backup_list_verify.py  test_calendar.py  test_config.py  test_history.py  test_inprogress.py  test_ledger.py  test_list.py  test_mastered.py  test_nextup.py  test_pause.py  test_random.py  test_random_all.py  test_remove.py  test_remove_mastered.py  test_server.py  test_take.py
