[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "srl"
dynamic = ["version"]
description = "Spaced repetition learning CLI tool"
authors = [{ name = "Hayes Barber" }]
requires-python = ">=3.10"
dependencies = [
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
srl = "srl.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools_scm]
write_to = "srl/_version.py"

